--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "1.4.1",
+    "@material-ui/icons": "^2.0.0",
     "leaflet": "^1.3.3",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
