--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^2.4.0"
+    "react-transition-group": "^2.4.0",
+    "firebase": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
