--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "1.4.1",
-    "@material-ui/icons": "^2.0.0",
+    "@material-ui/icons": "^2.0.1",
+    "firebase": "^5.3.1",
+    "fuse.js": "^3.2.1",
     "leaflet": "^1.3.3",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
@@ -15,8 +17,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^2.4.0",
-    "firebase": "^5.3.1"
+    "react-transition-group": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
