--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "1.4.1",
     "@material-ui/icons": "^2.0.1",
+    "classnames": "^2.2.6",
     "firebase": "^5.3.1",
     "fuse.js": "^3.2.1",
     "leaflet": "^1.3.3",
