--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@google/maps": "^0.5.5",
     "@material-ui/core": "1.4.1",
     "@material-ui/icons": "^2.0.1",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "firebase": "^5.3.1",
     "fuse.js": "^3.2.1",
@@ -20,7 +21,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-spinkit": "^3.0.0",
-    "react-transition-group": "^2.4.0"
+    "react-transition-group": "^2.4.0",
+    "twilio": "^3.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
